@@ -269,6 +269,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 5950) Improvements to French localisation
 * (bug 5805) {{plural:}} support for counters in some special pages
 * (bug 5952) Improvement to German localisation (de)
+* Rename conflicting metadata help message to "metadata_help" (was "metadata")
+  and treat it as wiki text
 
 == Compatibility ==
 
